# testing-challenge

./: README.md  pyproject.toml
.github/workflows/: python-ci_exercise_1.yml  python-ci_exercise_2.yml
Exercise1-API/: Exercise1-instructions.md
Exercise1-API/book-store/: README.md
Exercise1-API/book-store/api/: bookstore_api.py
Exercise1-API/book-store/tests/: CREATE_test.py  DATA_test.py  DELETE_test.py  README.md  READ_test.py  UPDATE_test.py
Exercise1-API/book-store/tests/samples/: book_up_to_date.json  boundary_1.json  boundary_11.json  boundary_12.json  boundary_13.json  boundary_14.json  boundary_15.json  boundary_2.json  boundary_3.json  boundary_4.json  boundary_5.json  boundary_6.json  boundary_7.json  boundary_8.json  boundary_9.json  error_book_not_found.json  error_empty_title.json  error_invalid_date.json  error_invalid_isbn.json  error_invalid_price.json  error_missing_required_fields.json  expected10.json  expected2.json  expected3.json  expected4.json  expected5.json  expected6.json  expected7.json  expected8.json  expected9.json  expected_boundary_1.json  expected_boundary_10.json  expected_boundary_15.json  expected_boundary_3.json  expected_boundary_4.json  expected_retrieve_1.json  expected_retrieve_2.json  expected_retrieve_3.json  expected_retrieve_4.json  expected_retrieve_single_1.json  (+13 more)
Exercise1-API/book-store/tests/test_utils/: constants.py  json_utils.py  random_book.py  utils.py
Exercise2-UI/: Exercise2-instructions.md  README.md  conftest.py  debugBear_test.py  url_test.py  utils.py
