[tool.poetry]
name = "book-store"
version = "1.0.0"
description = "Book Store API"
authors = ["Idoven"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"

gunicorn = "20.1.0"
uvicorn = "0.21.0"
python-multipart = "0.0.6"
python-i18n = {extras = ["yaml"], version = "0.3.9"}
toml = "0.10.2"
flask = "^2.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"
httpx = "0.23.3"
requests-toolbelt = "0.10.1"
toml = "0.10.2"
pytest-env = "0.8.1"
python-dotenv = "1.0.0"
jsonschema = "4.17.3"
pytest-xdist = "3.3.1"
pytest-html = "3.2.0"
pytest-cov = "4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
  ".", "tests"
]
